# rexgrid

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  setup.cfg  tox.ini
docs/: api.rst  changelog.rst  clean.py  conf.py  index.rst  user_guide.rst
examples/: README.rst  dummy.py  indexes.py
rexgrid/: __init__.py  bounds.py  interpolation_1d.py  interpolation_rbf.py  overlap_1d.py  reduce.py  regridder.py  structured.py  typing.py  unstructured.py  utils.py  weight_matrix.py  weights_1d.py  wrapper.py
